2010-05-06  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_draw_image_relief): Move declaration of extra to beginning.

2010-05-06  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (CPP, LN_S): Remove unused variables.

2010-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fchar_syntax): Check the arg is a character (bug#6080).

2010-05-05  Lawrence Mitchell  <wence@gmx.li>

	* m/sparc.h: Fix typo in earlier change.

2010-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	Misc tweaks.
	* eval.c (Fdefvaralias): Remove unintended nested if.
	(internal_condition_case_2, internal_condition_case_n): Use ANSI type.

2010-05-04  Bernhard Herzog  <bh@intevation.de>  (tiny change)

	* xsmfns.c (smc_save_yourself_CB): strlen(client_id) => strlen(cwd).

2010-05-04  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove BSD_PGRPS.
	* s/bsd-common.h (BSD_PGRPS): Remove undef.
	* s/gnu-linux.h (BSD_PGRPS): Remove.
	* term.c (dissociate_if_controlling_tty):
	* sysdep.c (narrow_foreground_group, widen_foreground_group)
	(init_sys_modes, reset_sys_modes):
	* emacs.c (main):
	* callproc.c (Fcall_process, child_setup): Remove code depending
	on BSD_PGRPS.

	Remove POSIX_SIGNALS.
	* s/usg5-4.h (POSIX_SIGNALS):
	* s/netbsd.h (POSIX_SIGNALS):
	* s/msdos.h (POSIX_SIGNALS):
	* s/ms-w32.h (POSIX_SIGNALS):
	* s/hpux11.h (POSIX_SIGNALS):
	* s/gnu.h (POSIX_SIGNALS):
	* s/gnu-linux.h (POSIX_SIGNALS):
	* s/freebsd.h (POSIX_SIGNALS):
	* s/darwin.h (POSIX_SIGNALS):
	* s/cygwin.h (POSIX_SIGNALS):
	* s/aix4-2.h (POSIX_SIGNALS): Remove definition.
	* s/unixware.h:
	* s/sol2-6.h: Remove comments on POSIX_SIGNALS.
	* process.c (create_process):
	* syssignal.h:
	* sysdep.c (wait_for_termination, init_signals):
	* process.c (create_process):
	* msdos.c: POSIX_SIGNALS is always defined on all platforms,
	remove all code that assumes the contrary.

2010-05-04  Glenn Morris  <rgm@gnu.org>

	* s/gnu-linux.h (LD_SWITCH_SYSTEM): Use LD_SWITCH_X_SITE_AUX as a shell
	variable.